syntax = "proto3";

package pb;

message File {
    string id = 1;
    string revisionID = 2;
    string name = 3;
    string parentID = 4;
}

message CreateFileRequest {
    int64 userID = 1;
    string revisionID = 2;
    string name = 3;
    // If null, then file assumed to be at root.
    string parentID = 4;
}

message FileResponse {
    File file = 1;
}

message GetFileRequest {
    int64 userID = 1;
    string fileID = 2;
}

message UpdateFileRequest {
    int64 userID = 1;
    string fileID = 2;
    // The name of the file (optionally used for renames)
    string name = 3;
    // The ID of the parent folder (optionally used for moves)
    string parentID = 4;
}

message DeleteFileRequest {
    int64 userID = 1;
    string fileID = 2;
}

service FileService {
    rpc CreateFile (CreateFileRequest) returns (FileResponse) {}
    rpc GetFile (GetFileRequest) returns (FileResponse) {}
    rpc UpdateFile (UpdateFileRequest) returns (FileResponse) {}
    rpc DeleteFile (DeleteFileRequest) returns (FileResponse) {}
}
